demos/devdocs/0.62.0/niivue/index.md
# niivue

## Classes

| Class                       | Description                                                                                                                                   |
| --------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------- |
| [Niivue](classes/Niivue.md) | Niivue can be attached to a canvas. An instance of Niivue contains methods for loading and rendering NIFTI image data in a WebGL 2.0 context. |

## Type Aliases

| Type Alias                                           | Description |
| ---------------------------------------------------- | ----------- |
| [DicomLoader](type-aliases/DicomLoader.md)           | -           |
| [DicomLoaderInput](type-aliases/DicomLoaderInput.md) | -           |

## References

### cmapper

Re-exports [cmapper](../colortables/variables/cmapper.md)

---

### COLORMAP_TYPE

Re-exports [COLORMAP_TYPE](../nvdocument/enumerations/COLORMAP_TYPE.md)

---

### colortables

Renames and re-exports [ColorTables](../colortables/classes/ColorTables.md)

---

### CompletedAngle

Re-exports [CompletedAngle](../nvdocument/interfaces/CompletedAngle.md)

---

### CompletedMeasurement

Re-exports [CompletedMeasurement](../nvdocument/interfaces/CompletedMeasurement.md)

---

### Connectome

Re-exports [Connectome](../types/type-aliases/Connectome.md)

---

### ConnectomeOptions

Re-exports [ConnectomeOptions](../types/type-aliases/ConnectomeOptions.md)

---

### DEFAULT_OPTIONS

Re-exports [DEFAULT_OPTIONS](../nvdocument/variables/DEFAULT_OPTIONS.md)

---

### DocumentData

Re-exports [DocumentData](../nvdocument/type-aliases/DocumentData.md)

---

### DragReleaseParams

Re-exports [DragReleaseParams](../types/type-aliases/DragReleaseParams.md)

---

### ExportDocumentData

Re-exports [ExportDocumentData](../nvdocument/type-aliases/ExportDocumentData.md)

---

### INITIAL_SCENE_DATA

Re-exports [INITIAL_SCENE_DATA](../nvdocument/variables/INITIAL_SCENE_DATA.md)

---

### LabelAnchorPoint

Re-exports [LabelAnchorPoint](../nvlabel/enumerations/LabelAnchorPoint.md)

---

### LabelLineTerminator

Re-exports [LabelLineTerminator](../nvlabel/enumerations/LabelLineTerminator.md)

---

### LabelTextAlignment

Re-exports [LabelTextAlignment](../nvlabel/enumerations/LabelTextAlignment.md)

---

### LegacyConnectome

Re-exports [LegacyConnectome](../types/type-aliases/LegacyConnectome.md)

---

### LegacyNodes

Re-exports [LegacyNodes](../types/type-aliases/LegacyNodes.md)

---

### MouseEventConfig

Re-exports [MouseEventConfig](../nvdocument/interfaces/MouseEventConfig.md)

---

### NiftiHeader

Re-exports [NiftiHeader](../types/type-aliases/NiftiHeader.md)

---

### NiiVueLocation

Re-exports [NiiVueLocation](../types/type-aliases/NiiVueLocation.md)

---

### NiiVueLocationValue

Re-exports [NiiVueLocationValue](../types/type-aliases/NiiVueLocationValue.md)

---

### NVConfigOptions

Re-exports [NVConfigOptions](../nvdocument/type-aliases/NVConfigOptions.md)

---

### NVImage

Re-exports [NVImage](../nvimage/classes/NVImage.md)

---

### NVImageFromUrlOptions

Re-exports [NVImageFromUrlOptions](../nvimage/functions/NVImageFromUrlOptions.md)

---

### NVMesh

Re-exports [NVMesh](../nvmesh/classes/NVMesh.md)

---

### NVMeshFromUrlOptions

Re-exports [NVMeshFromUrlOptions](../nvmesh/classes/NVMeshFromUrlOptions.md)

---

### NVMeshLayerDefaults

Re-exports [NVMeshLayerDefaults](../nvmesh/variables/NVMeshLayerDefaults.md)

---

### NVMeshUtilities

Re-exports [NVMeshUtilities](../nvmesh-utilities/classes/NVMeshUtilities.md)

---

### NVUtilities

Re-exports [NVUtilities](../nvutilities/classes/NVUtilities.md)

---

### PEN_TYPE

Re-exports [PEN_TYPE](../nvdocument/enumerations/PEN_TYPE.md)

---

### Point

Re-exports [Point](../types/type-aliases/Point.md)

---

### Scene

Re-exports [Scene](../nvdocument/type-aliases/Scene.md)

---

### SHOW_RENDER

Re-exports [SHOW_RENDER](../nvdocument/enumerations/SHOW_RENDER.md)

---

### SyncOpts

Re-exports [SyncOpts](../types/type-aliases/SyncOpts.md)

---

### TouchEventConfig

Re-exports [TouchEventConfig](../nvdocument/interfaces/TouchEventConfig.md)

---

### Volume

Re-exports [Volume](../types/type-aliases/Volume.md)
